Fix contrast issues

--- a/static/main.css
+++ b/static/main.css
@@ -15,7 +15,7 @@ Autor URI: http://enrique-ramirez.com
 /* Body */
 body {
   background: #FDF6E3;
-  color: #8A887B;
+  color: #6A685B;
   font-size: 16px;
   font-family: 'Crimson Text', 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-shadow: 0px 0px 1px #BFBFBF;
@@ -83,7 +83,7 @@ Header
   display: inline-block;
   padding: 5px;
   text-decoration: none;
-  color: #8A887B;
+  color: #383732;
 }
 #mainheader menu.menu0 a {
   font-size: 20px;
@@ -146,8 +146,6 @@ a:link, a:visited {
   text-decoration: underline;
 }
 a:hover, a:active {
-  /*background-color: #inherit;*/
-  /*color: #fff;*/
   text-decoration: underline;
   /*text-shadow: 1px 1px 1px #333;*/
 }
